Changes for debugging on OSX (fhir-tools-settings.conf)